<resources>
	<!--GENERAL-->
	<string name="app_name">ETicket</string>

	<!--HEADERS-->
	<string name="title_login">Autentificare in E-Ticket</string>
	<string name="title_main">ETicketMain</string>
	<string name="title_fragment_home">Acasa</string>
	<string name="title_fragment_bus">Autobuze</string>
	<string name="title_fragment_parking">Parking</string>
	<string name="title_fragment_settings">Setări</string>

	<string name="tab_name_ticket">Bilete</string>
	<string name="tab_name_routes">Trasee</string>
	<string name="tab_name_parking">Parcări</string>
	<string name="tab_name_history">Istoric</string>

	<!--TOOLBAR MENU ITEMS-->
	<string name="action_settings">Setări</string>
	<string name="action_chatbot">Chatbot</string>
	<string name="action_sign_out">Ieșire</string>

	<!--NAV DRAWER-->
	<string name="menu_home">Acasa</string>
	<string name="menu_bus">Autobuz</string>
	<string name="menu_tbus">Troleibuz</string>
	<string name="menu_tram">Tramvai</string>
	<string name="menu_car">Parcări</string>
	<string name="menu_acc_pref_title">Preferințe cont</string>
	<string name="menu_assistant">Asistent</string>
	<string name="menu_settings">@string/title_fragment_settings</string>

	<!-- BUS ACTIVITY -->
	<!-- Fragment Traseu -->
	<string name="opt_trasee">Filtrează trasee:</string>

	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Parola</string>
	<string name="action_sign">Autentificare</string>
	<string name="action_create_account">Înregistrare</string>
	<string name="error_invalid_email">Adresă de email invalidă</string>
	<string name="error_invalid_password">Parola este prea scurtă</string>
	<string name="error_incorrect_password">Parolă incorectă</string>
	<string name="error_field_required">Câmp obligatoriu</string>
	<string name="emailpassword_status_fmt">Email utilizator: %1$s (verificat: %2$b)</string>

	<!--Bilet layout-->
	<string name="nr_traseu">102</string>
	<string name="status_bilet_activ">Activ</string>
	<string name="status_bilet_expirat">Expirat</string>
	<string name="nr_calatorii">Calatorii:</string>
	<string name="ora_bilet">Ora:</string>
	<string name="data_bilet">Data:</string>
	<string name="serie_bilet">Serie:</string>
	<string name="zero_bilete">Nu există nici un bilet în listă</string>

	<!--Route layout-->
	<string name="route_name_fmt">Stație: %s</string>
	<string name="route_time_fmt">Sosire: %s</string>
	<string name="ora_traseu_fmt">Ora sosire: %1$s</string>
	<string name="nr_traseu_fmt">Număr traseu:</string>

	<!--Tranzactie layout-->
	<string name="istoric_data">%1$d\n%2$s</string>
	<string name="istoric_bilet">Bilet %1$s</string>
	<string name="istoric_pret">%1$.2f\nRON</string>

	<!--Chatbot-->
	<string name="chat_trimite">Trimite</string>
	<string name="vezi_detalii">Vezi detalii</string>

	<!--Signout alert dialog-->
	<string name="parking_alert_message">Alertă la epuizarea timpului?</string>
	<string name="signout_message">Sunteți siguri că doriți să ieșiți din cont?</string>
	<string name="afirmativ">Da</string>
	<string name="negativ">Anulează</string>

	<!--TransportType-->
	<string name="transport_type_troleybus">Troleibuz</string>
	<string name="transport_type_bus">Autobuz</string>
	<string name="transport_type_tramway">Tramvai</string>
	<string name="transport_type_parking">Autoturism</string>
	<string name="transport_type_not_available">Transport indisponibil</string>

	<!--Navigation-->
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>

	<string name="section_format">Hello World from section: %1$d</string>
	<string name="maps_API_key">AIzaSyA0Kv5NXTSkHZ5SBAIvIgDu8riKlR6LOiE</string>

	<!--Settings-->
	<string name="settings_pref_key_signout" translatable="false">signout</string>

	<!-- Preference Titles -->
	<string name="messages_header">Messages</string>
	<string name="sync_header">Sync</string>

	<!-- Messages Preferences -->
	<string name="signature_title">Your signature</string>
	<string name="reply_title">Default reply action</string>

	<!-- Sync Preferences -->
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
	<string name="attachment_summary_off">Only download attachments when manually requested</string>
	<string name="search">Search</string>
</resources>
