<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="10dp"
	app:cardCornerRadius="6dp"
	app:cardElevation="6dp"
	app:contentPadding="10dp">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/traseu_bilet"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/nr_traseu"
			android:textAlignment="center"
			android:textSize="24sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageView
			android:id="@+id/divider"
			android:layout_width="0dp"
			android:layout_height="1dp"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:scaleType="fitXY"
			app:layout_constraintBottom_toTopOf="@+id/status_bilet"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/traseu_bilet"
			app:srcCompat="@android:drawable/bottom_bar" />

		<TextView
			android:id="@+id/status_bilet"
			android:layout_width="0dp"
			android:layout_height="19dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/status_bilet"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/divider" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/status_bilet">

			<TextView
				android:id="@+id/ora_bilet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/ora_bilet" />

			<TextView
				android:id="@+id/data_bilet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/data_bilet" />

			<TextView
				android:id="@+id/calatorii_bilet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/nr_calatorii" />
		</LinearLayout>
	</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>