<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/backgrndv1"
	android:gravity="center_horizontal"
	tools:context=".ui.login.LoginActivity">

	<!-- Login progress -->

	<ScrollView
		android:id="@+id/login_form"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:background="@android:drawable/edit_text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:id="@+id/email_login_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/login_logo"
				android:layout_width="match_parent"
				android:layout_height="200px"
				app:srcCompat="@drawable/eticket_logo" />

			<TextView
				android:id="@+id/statusTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@android:color/holo_green_light"
				android:visibility="gone" />

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<AutoCompleteTextView
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_email"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:singleLine="true" />

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:imeActionId="6"
					android:imeActionLabel="@string/action_sign"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true" />

			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/btn_autentificare"
				style="@style/Widget.AppCompat.Button.Colored"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/action_sign"
				android:textStyle="bold" />

			<Button
				android:id="@+id/btn_inregistrare"
				style="@style/Widget.AppCompat.Button.Colored"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/action_create_account"
				android:textStyle="bold" />

		</LinearLayout>
	</ScrollView>

	<ProgressBar
		android:id="@+id/login_progress"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>