<?xml version="1.0" encoding="utf-8"?>
<layout>
	<data>

		<variable
			name="ticket"
			type="com.faciee.cti.valbastrelu.eticket.room.entities.Ticket" />
	</data>

	<androidx.cardview.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/feeditem_outside_margin"
		app:cardCornerRadius="6dp"
		app:contentPadding="@dimen/feeditem_inside_padding">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/traseu_bilet"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginStart="8dp"
				android:text="@{String.valueOf(ticket.routeNumber)}"
				android:textAlignment="center"
				android:textSize="36sp"
				android:textStyle="bold"
				app:statusColor="@{ticket.active}"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/divider"
				android:layout_width="0dp"
				android:layout_height="1dp"
				android:layout_marginEnd="8dp"
				android:layout_marginStart="8dp"
				android:scaleType="fitXY"
				app:layout_constraintBottom_toTopOf="@+id/status_bilet"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/traseu_bilet"
				app:srcCompat="@android:drawable/bottom_bar" />

			<TextView
				android:id="@+id/status_bilet"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginStart="8dp"
				android:text="@string/status_bilet_activ"
				android:textAlignment="center"
				android:textSize="24sp"
				app:statusColor="@{ticket.active}"
				app:statusBilet="@{ticket.active}"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/divider" />

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:orientation="horizontal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/status_bilet">

				<TextView
					android:id="@+id/calatorii_bilet"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_marginTop="8dp"
					android:text="@string/nr_calatorii"
					android:textAlignment="textStart"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/calatorii_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_marginTop="8dp"
					android:text="@{String.valueOf(ticket.trips)}"
					app:layout_constraintStart_toEndOf="@+id/calatorii_bilet"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/ora_bilet"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@string/ora_bilet"
					android:textAlignment="textStart"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/calatorii_bilet" />

				<TextView
					android:id="@+id/ora_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@{ticket.getHourMinute()}"
					app:layout_constraintStart_toEndOf="@+id/ora_bilet"
					app:layout_constraintTop_toBottomOf="@+id/calatorii_bilet" />

				<TextView
					android:id="@+id/data_bilet"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@string/data_bilet"
					android:textAlignment="textStart"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/ora_bilet" />

				<TextView
					android:id="@+id/data_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@{ticket.getDayMonthYear()}"
					app:layout_constraintStart_toEndOf="@+id/data_bilet"
					app:layout_constraintTop_toBottomOf="@+id/ora_bilet" />

				<TextView
					android:id="@+id/serie_bilet"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@string/serie_bilet"
					android:textAlignment="textStart"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/data_bilet" />

				<TextView
					android:id="@+id/serie_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@{String.valueOf(ticket.id)}"
					app:layout_constraintStart_toEndOf="@+id/serie_bilet"
					app:layout_constraintTop_toBottomOf="@+id/data_bilet" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.cardview.widget.CardView>
</layout>
