<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="ticket"
			type="com.faciee.cti.valbastrelu.eticket.room.entities.TicketParking" />
	</data>

	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		app:cardCornerRadius="6dp"
		app:cardElevation="6dp"
		app:contentPadding="10dp">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/traseu_ticket"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"
				android:text="@{String.valueOf(ticket.location)}"
				android:textAlignment="center"
				android:textSize="36sp"
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toTopOf="@id/divider"
				app:statusColor="@{ticket.active}"
				tools:text="Mazepa" />

			<View
				android:id="@+id/divider"
				android:layout_width="0dp"
				android:layout_height="1dp"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"
				app:layout_constraintBottom_toTopOf="@+id/status_ticket"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				android:background="@android:color/darker_gray"
				app:layout_constraintTop_toBottomOf="@+id/traseu_ticket"/>

			<TextView
				android:id="@+id/status_ticket"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"
				android:textAlignment="center"
				android:textSize="24sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/divider"
				app:statusBilet="@{ticket.active}"
				app:statusColor="@{ticket.active}"
				tools:text="@string/status_bilet_activ" />

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="8dp"
				android:orientation="horizontal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/status_ticket">


				<TextView
					android:id="@+id/ora_ticket"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_marginTop="8dp"
					android:text="@string/ora_bilet"
					android:textAlignment="textStart"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/ora_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_marginTop="8dp"
					android:text="@{ticket.getHourMinute()}"
					app:layout_constraintStart_toEndOf="@+id/ora_ticket"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/data_ticket"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@string/data_bilet"
					android:textAlignment="textStart"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/ora_ticket" />

				<TextView
					android:id="@+id/data_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@{ticket.getDayMonthYear()}"
					app:layout_constraintStart_toEndOf="@+id/data_ticket"
					app:layout_constraintTop_toBottomOf="@+id/ora_ticket" />

				<TextView
					android:id="@+id/serie_ticket"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@string/serie_bilet"
					android:textAlignment="textStart"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/data_ticket" />

				<TextView
					android:id="@+id/serie_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@{String.valueOf(ticket.id)}"
					app:layout_constraintStart_toEndOf="@+id/serie_ticket"
					app:layout_constraintTop_toBottomOf="@+id/data_ticket" />

				<TextView
					android:id="@+id/mesaj_alerta"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_marginBottom="8dp"
					android:text="@string/parking_alert_message"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/serie_ticket" />

				<CheckBox
					android:id="@+id/checkBoxAlerta"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:checked="@{ticket.alertOn}"
					android:enabled="@{ticket.active}"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.cardview.widget.CardView>
</layout>
